create drone ci\cd

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,21 +9,6 @@ arch: amd64
 steps:
 
 
-  #- name: build-node
-  #  image: harbor.leadscloud.com:8443/library/node:13.10.1-stretch
-  #  environment:
-  #    build:
-  #      from_secret: build
-  #  settings:
-  #  commands:
-  #    - npm set registry http://10.2.2.164:8081/repository/npm-public/
-  #    - npm i
-  #    - echo $build
-  #    - npm run build:$build
-  #    - cp -r dist website
-  #  when:
-  #    event:
-  #      - push
   - name: build-node
     image: harbor.leadscloud.com:8443/library/node:13.10.1-stretch
     environment:
@@ -31,13 +16,14 @@ steps:
         from_secret: build
     settings:
     commands:
-      - mkdir website
-      - echo 1111 > website/aaa
+      - npm set registry http://10.2.2.164:8081/repository/npm-public/
+      - npm i
+      - echo $build
+      - npm run build:$build
+      - cp -r dist website
     when:
       event:
         - push
-
-
   - name: scp-files
     image: appleboy/drone-scp
     settings:
@@ -56,6 +42,7 @@ steps:
   - name: dingtalk
     image: lddsb/drone-dingtalk-message
     settings:
+      #7a5fd37aee720875479134ad1cc8faa932f972cae9cd758226dde42a46b6919c
       token:
         from_secret: dingding
       type: markdown
