--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "isomorphic-fetch": "^2.2.1",
     "less": "^3.11.1",
     "less-loader": "^6.0.0",
+    "node-sass": "^4.14.1",
+    "terser-webpack-plugin": "^3.0.8",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
